# ynab4-client

./: FEATURE_INVENTORY.md  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
e2e/: app.spec.ts  stress.spec.ts
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/: utils.ts
src/lib/components/accounts/: account-context-menu.svelte  account-details-dialog.svelte  accounts-panel.svelte  create-account-view.svelte  index.ts
src/lib/components/budget/: budget-picker.svelte  budget-view.svelte  category-context-menu.svelte  category-note-dialog.svelte  create-budget-dialog.svelte  index.ts  quick-budget-menu.svelte
src/lib/components/cashflow/: cashflow-view.svelte  index.ts
src/lib/components/edit-mode/: edit-mode-toggle.svelte  edit-mode-warning.svelte  index.ts
src/lib/components/entry/: index.ts  numeric-keypad.svelte  transaction-entry-sheet.svelte
src/lib/components/import/: import-context-menu.svelte  import-editor.svelte  import-file-list.svelte  import-row.svelte  index.ts  (+2 more)
src/lib/i18n/: index.ts
src/lib/services/: budget-loader.ts  budget-sync.ts  import-service.ts  import-storage.ts  index.ts  installation-config.ts  msi-service.ts  quick-budget.ts  report-service.ts  tauri-io.ts
src/lib/stores/: budget.ts  classifications.ts  index.ts  ui.ts
src/lib/utils/: dropbox-auth.ts  empty-module.js  index.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/callback/: +page.svelte
(+85 files in other folders)
